--- a/ArxProject2/ArxProject2/ArxProject2.vcxproj.filters
+++ b/ArxProject2/ArxProject2/ArxProject2.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="TransUtil.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="BlockUtil.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StdAfx.h">
@@ -135,6 +138,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="TransUtil.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="BlockUtil.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
