--- a/ArxProject2/ArxProject2/ArxProject2.vcxproj
+++ b/ArxProject2/ArxProject2/ArxProject2.vcxproj
@@ -86,6 +86,7 @@
     <ClCompile Include="EllipseUtil.cpp" />
     <ClCompile Include="CGePointUtil.cpp" />
     <ClCompile Include="HatchUtil.cpp" />
+    <ClCompile Include="LayerUtil.cpp" />
     <ClCompile Include="LineUtil.cpp" />
     <ClCompile Include="MathUtil.cpp" />
     <ClCompile Include="PolylineUtil.cpp" />
@@ -98,6 +99,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="StringUtil.cpp" />
     <ClCompile Include="TextUtil.cpp" />
     <ClCompile Include="TransUtil.cpp" />
   </ItemGroup>
@@ -111,6 +113,7 @@
     <ClInclude Include="EllipseUtil.h" />
     <ClInclude Include="GePointUtil.h" />
     <ClInclude Include="HatchUtil.h" />
+    <ClInclude Include="LayerUtil.h" />
     <ClInclude Include="LineUtil.h" />
     <ClInclude Include="MathUtil.h" />
     <ClInclude Include="PolylineUtil.h" />
@@ -119,6 +122,7 @@
     <ClInclude Include="RunCommand.h" />
     <ClInclude Include="SplieUtil.h" />
     <ClInclude Include="StdAfx.h" />
+    <ClInclude Include="StringUtil.h" />
     <ClInclude Include="TextUtil.h" />
     <ClInclude Include="TransUtil.h" />
   </ItemGroup>
