--- a/ArxProject2/ArxProject2/ArxProject2.vcxproj.filters
+++ b/ArxProject2/ArxProject2/ArxProject2.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="StringUtil.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="TextFileUtil.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StdAfx.h">
@@ -156,6 +159,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="StringUtil.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="TextFileUtil.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
