--- a/ArxProject2/ArxProject2/ArxProject2.vcxproj
+++ b/ArxProject2/ArxProject2/ArxProject2.vcxproj
@@ -100,6 +100,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="StringUtil.cpp" />
+    <ClCompile Include="TextFileUtil.cpp" />
     <ClCompile Include="TextUtil.cpp" />
     <ClCompile Include="TransUtil.cpp" />
   </ItemGroup>
@@ -123,6 +124,7 @@
     <ClInclude Include="SplieUtil.h" />
     <ClInclude Include="StdAfx.h" />
     <ClInclude Include="StringUtil.h" />
+    <ClInclude Include="TextFileUtil.h" />
     <ClInclude Include="TextUtil.h" />
     <ClInclude Include="TransUtil.h" />
   </ItemGroup>
