--- a/ArxProject2/ArxProject2/ArxProject2.vcxproj.filters
+++ b/ArxProject2/ArxProject2/ArxProject2.vcxproj.filters
@@ -99,8 +99,14 @@
     <ClCompile Include="TextStyleUtil.cpp">
       <Filter>源文件\SymbolTable</Filter>
     </ClCompile>
-    <ClCompile Include="GetInputUtil.cpp">
+    <ClCompile Include="SelectionSetCommands.cpp">
       <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="SelectUtil.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="GetInputUtil.cpp">
+      <Filter>源文件\Tool</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -174,6 +180,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="GetInputUtil.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="SelectUtil.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
