--- a/ArxProject3/ArxProject3.vcxproj
+++ b/ArxProject3/ArxProject3.vcxproj
@@ -76,6 +76,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="acrxEntryPoint.cpp" />
+    <ClCompile Include="AppDirectoryUtil.cpp" />
     <ClCompile Include="ArxProject3.cpp" />
     <ClCompile Include="BlockUtil.cpp" />
     <ClCompile Include="CGePointUtil.cpp" />
@@ -85,6 +86,7 @@
     <ClCompile Include="DwgDataBaseUtil.cpp" />
     <ClCompile Include="GetInputUtil.cpp" />
     <ClCompile Include="MathUtil.cpp" />
+    <ClCompile Include="PolylineUtil.cpp" />
     <ClCompile Include="SelectUtil.cpp" />
     <ClCompile Include="StdAfx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -97,6 +99,7 @@
     <ClCompile Include="TransUtil.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AppDirectoryUtil.h" />
     <ClInclude Include="BlockUtil.h" />
     <ClInclude Include="ConvertUtil.h" />
     <ClInclude Include="DocData.h" />
@@ -105,6 +108,7 @@
     <ClInclude Include="GePointUtil.h" />
     <ClInclude Include="GetInputUtil.h" />
     <ClInclude Include="MathUtil.h" />
+    <ClInclude Include="PolylineUtil.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SelectUtil.h" />
     <ClInclude Include="StdAfx.h" />
