--- a/CustomObjDBX/CustomObjDBX.vcxproj
+++ b/CustomObjDBX/CustomObjDBX.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ArxAppType>arx</ArxAppType>
+    <ArxAppType>dbx</ArxAppType>
     <RDS>ECD</RDS>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -42,7 +42,7 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <PropertyGroup Label="Globals">
     <TargetName Condition="'$(RDS)'!=''">$(RDS)$(ProjectName)</TargetName>
-    <ProjectGuid>{4AE72970-BEED-4455-B21F-F0BE7DE2766C}</ProjectGuid>
+    <ProjectGuid>{4BD50B4A-AF33-4819-B2C1-03455DC21AAE}</ProjectGuid>
   </PropertyGroup>
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
@@ -74,57 +74,34 @@
     <Link>
     </Link>
     <Link>
-      <AdditionalLibraryDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">D:\C++AutocadCode\NewRepo\CustomObjDBX\x64\Debug\ECDCustomObjDBX.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <OutputFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">D:\C++AutocadCode\NewRepo\CustomObjDBX\x64\Debug\ECDCustomObjDBX.dbx</OutputFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="acrxEntryPoint.cpp" />
-    <ClCompile Include="AppDirectoryUtil.cpp" />
-    <ClCompile Include="ArxProject3.cpp" />
-    <ClCompile Include="BlockUtil.cpp" />
-    <ClCompile Include="CGePointUtil.cpp" />
-    <ClCompile Include="ConvertUtil.cpp" />
-    <ClCompile Include="DocData.cpp" />
-    <ClCompile Include="DrawRecJig.cpp" />
-    <ClCompile Include="DwgDataBaseUtil.cpp" />
-    <ClCompile Include="GetInputUtil.cpp" />
-    <ClCompile Include="MathUtil.cpp" />
-    <ClCompile Include="PolylineUtil.cpp" />
-    <ClCompile Include="SelectUtil.cpp" />
+    <ClCompile Include="CustomObjDBX.cpp" />
+    <ClCompile Include="ECDDwgScaleCO.cpp" />
     <ClCompile Include="StdAfx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="StringUtil.cpp" />
-    <ClCompile Include="TextFileUtil.cpp" />
-    <ClCompile Include="TransUtil.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AppDirectoryUtil.h" />
-    <ClInclude Include="BlockUtil.h" />
-    <ClInclude Include="ConvertUtil.h" />
-    <ClInclude Include="DocData.h" />
-    <ClInclude Include="DrawRecJig.h" />
-    <ClInclude Include="DwgDataBaseUtil.h" />
-    <ClInclude Include="GePointUtil.h" />
-    <ClInclude Include="GetInputUtil.h" />
-    <ClInclude Include="MathUtil.h" />
-    <ClInclude Include="PolylineUtil.h" />
+    <ClInclude Include="ECDDwgScaleCO.h" />
     <ClInclude Include="Resource.h" />
-    <ClInclude Include="SelectUtil.h" />
     <ClInclude Include="StdAfx.h" />
-    <ClInclude Include="StringUtil.h" />
-    <ClInclude Include="TextFileUtil.h" />
-    <ClInclude Include="TransUtil.h" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="ArxProject3.rc" />
+    <ResourceCompile Include="CustomObjDBX.rc" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Autodesk.arx-2018.props" />
+    <None Include="crx.props" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
