--- a/CustomObjDBX/CustomObjDBX.vcxproj
+++ b/CustomObjDBX/CustomObjDBX.vcxproj
@@ -81,6 +81,7 @@
     <ClCompile Include="acrxEntryPoint.cpp" />
     <ClCompile Include="CustomObjDBX.cpp" />
     <ClCompile Include="ECDDwgScaleCO.cpp" />
+    <ClCompile Include="ECDTriangleObj.cpp" />
     <ClCompile Include="StdAfx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -90,6 +91,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ECDDwgScaleCO.h" />
+    <ClInclude Include="ECDTriangleObj.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="StdAfx.h" />
   </ItemGroup>
