--- a/MyMenu/MyMenu.vcxproj
+++ b/MyMenu/MyMenu.vcxproj
@@ -111,6 +111,7 @@
   <ItemGroup>
     <None Include="Autodesk.arx-2018-net.props" />
     <None Include="Autodesk.arx-2018.props" />
+    <None Include="crx.props" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
