--- a/ECDDrawGrider/ECDDrawGrider.vcxproj.filters
+++ b/ECDDrawGrider/ECDDrawGrider.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="EcdZhuangZhu.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="EcdKuaiJX.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StdAfx.h">
@@ -117,6 +120,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="EcdZhuangZhu.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="EcdKuaiJX.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
