--- a/DimMirror/DimMirror.vcxproj
+++ b/DimMirror/DimMirror.vcxproj
@@ -25,7 +25,7 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
     <CLRSupport>false</CLRSupport>
     <UseOfMfc>Dynamic</UseOfMfc>
     <!-- <UseOfAtl>false</UseOfAtl> -->
@@ -42,7 +42,7 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <PropertyGroup Label="Globals">
     <TargetName Condition="'$(RDS)'!=''">$(RDS)$(ProjectName)</TargetName>
-    <ProjectGuid>{4AE72970-BEED-4455-B21F-F0BE7DE2766C}</ProjectGuid>
+    <ProjectGuid>{78CC387E-99FC-4F94-98D1-09E98E501D43}</ProjectGuid>
   </PropertyGroup>
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
@@ -70,71 +70,28 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Use</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Use</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Use</PrecompiledHeader>
-      <WarningLevel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">TurnOffAllWarnings</WarningLevel>
     </ClCompile>
     <Link>
-    </Link>
-    <Link>
-      <AdditionalLibraryDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="acrxEntryPoint.cpp" />
-    <ClCompile Include="AppDirectoryUtil.cpp" />
-    <ClCompile Include="ArxDialog.cpp" />
-    <ClCompile Include="ArxProject3.cpp" />
-    <ClCompile Include="BlockUtil.cpp" />
-    <ClCompile Include="CGePointUtil.cpp" />
-    <ClCompile Include="ConvertUtil.cpp" />
-    <ClCompile Include="DatabaseJigEntity.cpp" />
     <ClCompile Include="DimMirror.cpp" />
     <ClCompile Include="DocData.cpp" />
-    <ClCompile Include="DrawRecJig.cpp" />
-    <ClCompile Include="DwgDataBaseUtil.cpp" />
-    <ClCompile Include="GetInputUtil.cpp" />
-    <ClCompile Include="MathUtil.cpp" />
-    <ClCompile Include="MFCDialog.cpp" />
-    <ClCompile Include="ModelessDialog.cpp" />
-    <ClCompile Include="MoveJig.cpp" />
-    <ClCompile Include="PolylineUtil.cpp" />
-    <ClCompile Include="SelectUtil.cpp" />
     <ClCompile Include="StdAfx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="StringUtil.cpp" />
-    <ClCompile Include="TextFileUtil.cpp" />
-    <ClCompile Include="TransUtil.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AppDirectoryUtil.h" />
-    <ClInclude Include="ArxDialog.h" />
-    <ClInclude Include="BlockUtil.h" />
-    <ClInclude Include="ConvertUtil.h" />
-    <ClInclude Include="DatabaseJigEntity.h" />
-    <ClInclude Include="DimMirror.h" />
     <ClInclude Include="DocData.h" />
-    <ClInclude Include="DrawRecJig.h" />
-    <ClInclude Include="DwgDataBaseUtil.h" />
-    <ClInclude Include="GePointUtil.h" />
-    <ClInclude Include="GetInputUtil.h" />
-    <ClInclude Include="MathUtil.h" />
-    <ClInclude Include="MFCDialog.h" />
-    <ClInclude Include="ModelessDialog.h" />
-    <ClInclude Include="MoveJig.h" />
-    <ClInclude Include="PolylineUtil.h" />
     <ClInclude Include="Resource.h" />
-    <ClInclude Include="SelectUtil.h" />
     <ClInclude Include="StdAfx.h" />
-    <ClInclude Include="StringUtil.h" />
-    <ClInclude Include="TextFileUtil.h" />
-    <ClInclude Include="TransUtil.h" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="ArxProject3.rc" />
+    <ResourceCompile Include="DimMirror.rc" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -142,9 +99,4 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
-  <ProjectExtensions>
-    <VisualStudio>
-      <UserProperties RESOURCE_FILE="ArxProject3.rc" />
-    </VisualStudio>
-  </ProjectExtensions>
 </Project>
