--- a/ArxProject3/ArxProject3.vcxproj.filters
+++ b/ArxProject3/ArxProject3.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="RegionUtil.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="FindTextAndBlock.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StdAfx.h">
@@ -165,6 +168,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="RegionUtil.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="FindTextAndBlock.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
