--- a/EcdMirror/EcdMirror.vcxproj.filters
+++ b/EcdMirror/EcdMirror.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="DatabaseJigEntity.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="StringUtil.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StdAfx.h">
@@ -48,6 +51,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="DatabaseJigEntity.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="StringUtil.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
